--- a/ch17-00-oop.html
+++ b/ch17-00-oop.html
@@ -167,18 +167,15 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#object-oriented-programming-features-of-rust" id="object-oriented-programming-features-of-rust">Object Oriented Programming Features of Rust</a></h1>
-<p>Object-oriented programming (OOP) is a way of modeling programs. Objects came
-from Simula in the 1960s. Those objects influenced Alan Kay’s programming
-architecture in which objects pass messages to each other. He coined the term
-<em>object-oriented programming</em> in 1967 to describe this architecture. Many
-competing definitions describe what OOP is; some definitions would classify
-Rust as object oriented, but other definitions would not. In this chapter,
-we’ll explore certain characteristics that are commonly considered object
-oriented and how those characteristics translate to idiomatic Rust. We’ll then
-show you how to implement an object-oriented design pattern in Rust and discuss
-the trade-offs of doing so versus implementing a solution using some of Rust’s
-strengths instead.</p>
+                        <h1><a class="header" href="#rust-的物件導向程式設計特色" id="rust-的物件導向程式設計特色">Rust 的物件導向程式設計特色</a></h1>
+<p>物件導向程式設計（Object-oriented programming, OOP）是一種模組化程式的方式，物件的概念始於 1960 年的 Simula。這些物件影響了 Alan Kay 的程式設計架構中物件彼此之間訊息的傳遞。他在 1967 年提出了<em>物件導向程式設計</em>來描述此架構。對於 OOP 的定義有許多種描述，有些定義會將 Rust 歸類爲屬於物件導向的，而有些則不會。在本章節中，我們會探討特定常視爲是物件導向的特色並看看這些特色如何轉換成慣用的 Rust 程式碼。然後我們會向你展示如何在 Rust 中實作物件導向設計模式，並討論這麼做與利用 Rust 自身的優勢實現的版本有何取捨差別。</p>
+<blockquote>
+<ul>
+<li>translators: [Ngô͘ Io̍k-ūi <a href="mailto:wusyong9104@gmail.com">wusyong9104@gmail.com</a>]</li>
+<li>commit: <a href="https://github.com/rust-lang/book/blob/e5ed97128302d5fa45dbac0e64426bc7649a558c/src/ch17-00-oop.md">e5ed971</a></li>
+<li>updated: 2020-09-22</li>
+</ul>
+</blockquote>
 
                     </main>
 
