--- a/print.html
+++ b/print.html
@@ -15707,84 +15707,39 @@ changes in the compiler -->
 </ul>
 </blockquote>
 <h2><a class="header" href="#可延展的並行與-sync-及-send-特徵" id="可延展的並行與-sync-及-send-特徵">可延展的並行與 <code>Sync</code> 及 <code>Send</code> 特徵</a></h2>
-<p>Interestingly, the Rust language has <em>very</em> few concurrency features. Almost
-every concurrency feature we’ve talked about so far in this chapter has been
-part of the standard library, not the language. Your options for handling
-concurrency are not limited to the language or the standard library; you can
-write your own concurrency features or use those written by others.</p>
-<p>However, two concurrency concepts are embedded in the language: the
-<code>std::marker</code> traits <code>Sync</code> and <code>Send</code>.</p>
-<h3><a class="header" href="#allowing-transference-of-ownership-between-threads-with-send" id="allowing-transference-of-ownership-between-threads-with-send">Allowing Transference of Ownership Between Threads with <code>Send</code></a></h3>
-<p>The <code>Send</code> marker trait indicates that ownership of the type implementing
-<code>Send</code> can be transferred between threads. Almost every Rust type is <code>Send</code>,
-but there are some exceptions, including <code>Rc&lt;T&gt;</code>: this cannot be <code>Send</code> because
-if you cloned an <code>Rc&lt;T&gt;</code> value and tried to transfer ownership of the clone to
-another thread, both threads might update the reference count at the same time.
-For this reason, <code>Rc&lt;T&gt;</code> is implemented for use in single-threaded situations
-where you don’t want to pay the thread-safe performance penalty.</p>
-<p>Therefore, Rust’s type system and trait bounds ensure that you can never
-accidentally send an <code>Rc&lt;T&gt;</code> value across threads unsafely. When we tried to do
-this in Listing 16-14, we got the error <code>the trait Send is not implemented for Rc&lt;Mutex&lt;i32&gt;&gt;</code>. When we switched to <code>Arc&lt;T&gt;</code>, which is <code>Send</code>, the code
-compiled.</p>
-<p>Any type composed entirely of <code>Send</code> types is automatically marked as <code>Send</code> as
-well. Almost all primitive types are <code>Send</code>, aside from raw pointers, which
-we’ll discuss in Chapter 19.</p>
-<h3><a class="header" href="#allowing-access-from-multiple-threads-with-sync" id="allowing-access-from-multiple-threads-with-sync">Allowing Access from Multiple Threads with <code>Sync</code></a></h3>
-<p>The <code>Sync</code> marker trait indicates that it is safe for the type implementing
-<code>Sync</code> to be referenced from multiple threads. In other words, any type <code>T</code> is
-<code>Sync</code> if <code>&amp;T</code> (a reference to <code>T</code>) is <code>Send</code>, meaning the reference can be
-sent safely to another thread. Similar to <code>Send</code>, primitive types are <code>Sync</code>,
-and types composed entirely of types that are <code>Sync</code> are also <code>Sync</code>.</p>
-<p>The smart pointer <code>Rc&lt;T&gt;</code> is also not <code>Sync</code> for the same reasons that it’s not
-<code>Send</code>. The <code>RefCell&lt;T&gt;</code> type (which we talked about in Chapter 15) and the
-family of related <code>Cell&lt;T&gt;</code> types are not <code>Sync</code>. The implementation of borrow
-checking that <code>RefCell&lt;T&gt;</code> does at runtime is not thread-safe. The smart
-pointer <code>Mutex&lt;T&gt;</code> is <code>Sync</code> and can be used to share access with multiple
-threads as you saw in the <a href="ch16-03-shared-state.html#sharing-a-mutext-between-multiple-threads">“Sharing a <code>Mutex&lt;T&gt;</code> Between Multiple
-Threads”</a><!-- ignore --> section.</p>
-<h3><a class="header" href="#implementing-send-and-sync-manually-is-unsafe" id="implementing-send-and-sync-manually-is-unsafe">Implementing <code>Send</code> and <code>Sync</code> Manually Is Unsafe</a></h3>
-<p>Because types that are made up of <code>Send</code> and <code>Sync</code> traits are automatically
-also <code>Send</code> and <code>Sync</code>, we don’t have to implement those traits manually. As
-marker traits, they don’t even have any methods to implement. They’re just
-useful for enforcing invariants related to concurrency.</p>
-<p>Manually implementing these traits involves implementing unsafe Rust code.
-We’ll talk about using unsafe Rust code in Chapter 19; for now, the important
-information is that building new concurrent types not made up of <code>Send</code> and
-<code>Sync</code> parts requires careful thought to uphold the safety guarantees. <a href="../nomicon/index.html">“The
-Rustonomicon”</a> has more information about these guarantees and how to
-uphold them.</p>
-<h2><a class="header" href="#summary-3" id="summary-3">Summary</a></h2>
-<p>This isn’t the last you’ll see of concurrency in this book: the project in
-Chapter 20 will use the concepts in this chapter in a more realistic situation
-than the smaller examples discussed here.</p>
-<p>As mentioned earlier, because very little of how Rust handles concurrency is
-part of the language, many concurrency solutions are implemented as crates.
-These evolve more quickly than the standard library, so be sure to search
-online for the current, state-of-the-art crates to use in multithreaded
-situations.</p>
-<p>The Rust standard library provides channels for message passing and smart
-pointer types, such as <code>Mutex&lt;T&gt;</code> and <code>Arc&lt;T&gt;</code>, that are safe to use in
-concurrent contexts. The type system and the borrow checker ensure that the
-code using these solutions won’t end up with data races or invalid references.
-Once you get your code to compile, you can rest assured that it will happily
-run on multiple threads without the kinds of hard-to-track-down bugs common in
-other languages. Concurrent programming is no longer a concept to be afraid of:
-go forth and make your programs concurrent, fearlessly!</p>
-<p>Next, we’ll talk about idiomatic ways to model problems and structure solutions
-as your Rust programs get bigger. In addition, we’ll discuss how Rust’s idioms
-relate to those you might be familiar with from object-oriented programming.</p>
-<h1><a class="header" href="#object-oriented-programming-features-of-rust" id="object-oriented-programming-features-of-rust">Object Oriented Programming Features of Rust</a></h1>
-<p>Object-oriented programming (OOP) is a way of modeling programs. Objects came
-from Simula in the 1960s. Those objects influenced Alan Kay’s programming
-architecture in which objects pass messages to each other. He coined the term
-<em>object-oriented programming</em> in 1967 to describe this architecture. Many
-competing definitions describe what OOP is; some definitions would classify
-Rust as object oriented, but other definitions would not. In this chapter,
-we’ll explore certain characteristics that are commonly considered object
-oriented and how those characteristics translate to idiomatic Rust. We’ll then
-show you how to implement an object-oriented design pattern in Rust and discuss
-the trade-offs of doing so versus implementing a solution using some of Rust’s
-strengths instead.</p>
+<p>有一個有趣的點是 Rust 語言提供的並行功能並<em>沒有很多</em>。本章節討論到的並行功能幾乎都來自於標準函式庫，並不是語言本身。你能處理並行的選項並不限於語言或標準函式庫，你可以寫出你自己的並行功能或使用其他人提供的。</p>
+<p>然而，還有有兩個並行概念深植於語言中，那就是 <code>std::marker</code> 中的 <code>Sync</code> 與 <code>Send</code> 特徵。</p>
+<h3><a class="header" href="#透過-send-來允許所有權能在執行緒間轉移" id="透過-send-來允許所有權能在執行緒間轉移">透過 <code>Send</code> 來允許所有權能在執行緒間轉移</a></h3>
+<p><code>Send</code> 標記特徵（marker traits）指定有實作 <code>Send</code> 特徵的型別才能將其所有權在執行緒間轉移。幾乎所有的 Rust 型別都有 <code>Send</code>，但有些例外。這包含 <code>Rc&lt;T&gt;</code>，此型別沒有 <code>Send</code> 是因爲如果你克隆了 <code>Rc&lt;T&gt;</code> 數值並嘗試轉移克隆的所有權到其他執行緒，會有兩條執行緒可能同時更新引用引用計數。基於此原因，<code>Rc&lt;T&gt;</code> 是用於當你不想要付出執行緒安全效能開銷時而在單一執行緒使用的情況。</p>
+<p>因此 Rust 的型別系統與特徵界限確保你無法意外不安全地傳送 <code>Rc&lt;T&gt;</code> 數值到其他執行緒。當我們嘗試範例 16-14 時，我們就會得到錯誤 <code>the trait Send is not implemented for Rc&lt;Mutex&lt;i32&gt;&gt;</code>。當我們切換成有實作 <code>Send</code> 的 <code>Arc&lt;T&gt;</code> 的話，程式碼就能編譯通過。</p>
+<p>任何由具有 <code>Send</code> 的型別所組成的型別也都會自動標記爲 <code>Send</code>。幾乎所有原始型別都是 <code>Send</code>，除了我們將在第十九章提及的裸指標（raw pointers）。</p>
+<h3><a class="header" href="#透過-sync-來允許多重執行緒存取" id="透過-sync-來允許多重執行緒存取">透過 <code>Sync</code> 來允許多重執行緒存取</a></h3>
+<p><code>Sync</code> 標記特徵指定有實作 <code>Sync</code> 的型別都能安全從多個執行緒來引用。換句話說，對於任何型別 <code>T</code>，如果 <code>&amp;T</code>（對 <code>T</code> 的引用）有 <code>Send</code> 的話，<code>T</code> 就是 <code>Sync</code> 的，這代表引用可以安全地傳給其他執行緒。與 <code>Send</code> 類似，原始型別都是 <code>Sync</code>，所以由具有 <code>Sync</code> 的型別所組成的型別也都有 <code>Sync</code>。</p>
+<p>智慧指標 <code>Rc&lt;T&gt;</code> 沒有 <code>Sync</code> 的原因和沒有 <code>Send</code> 的原因一樣。<code>RefCell&lt;T&gt;</code> 型別（我們在第十五章提過）與其 <code>Cell&lt;T&gt;</code> 也都沒有 <code>Sync</code>。 <code>RefCell&lt;T&gt;</code> 在執行時的借用檢查實作沒有執行緒安全。智慧指標 <code>Mutex&lt;T&gt;</code> 才有 <code>Sync</code> 並能像你在<a href="ch16-03-shared-state.html#%E5%9C%A8%E6%95%B8%E5%80%8B%E5%9F%B7%E8%A1%8C%E7%B7%92%E9%96%93%E5%85%B1%E4%BA%AB-mutext">「在數個執行緒間共享 <code>Mutex&lt;T&gt;</code>」</a><!-- ignore -->段落看到的那樣用來在多個執行緒間分享存取。</p>
+<h3><a class="header" href="#手動實作-send-與-sync-是不安全的" id="手動實作-send-與-sync-是不安全的">手動實作 <code>Send</code> 與 <code>Sync</code> 是不安全的</a></h3>
+<p>因爲由具有 <code>Send</code> 與 <code>Sync</code> 的型別組成的型別自動就會有 <code>Send</code> 與 <code>Sync</code>，我們不需要親自實作這些特徵。至於標記特徵，它們甚至沒有任何方法需要實作。它們只是用於強制確保並行相關的不變性。</p>
+<p>要手動實作這些特徵會需要實作不安全（unsafe）的 Rust 程式碼。我們會在第十九章討論如何使用不安全的 Rust 程式碼，現在最重要的資訊是要從不具有 <code>Send</code> 與 <code>Sync</code> 的元件來組成新的並行型別需要格外小心才能確保其安全保障。<a href="../nomicon/index.html">「The Rustonomicon」</a> 有更多關於這些保障與如何維持它們的資訊。</p>
+<h2><a class="header" href="#總結-12" id="總結-12">總結</a></h2>
+<p>這不會是你在本書中最後一次看到並行程式碼，第二十章的專案將會在更實際的場合中使用本章節的概念，而非這裡討論的簡單範例。</p>
+<p>如之前提過的，因爲 Rust 語言本身很少處理並行的部分，許多並行解決方案都實作成 crate。這些 crate 通常發展的比標準函式庫還快，所以別忘了到線上尋找目前最先進的 crate 來在多執行緒場合中使用喔。</p>
+<p>Rust 標準函式庫提供訊息傳遞的通道與智慧指標，像是 <code>Mutex&lt;T&gt;</code> 與 <code>Arc&lt;T&gt;</code>，能夠在並行環境中安全使用。型別系統與借用檢查器中確保使用這些解決方案的程式碼不會發生資料競爭或是無效引用。一旦你讓你的程式碼能編譯通過後，你可以放心地認定它會開開心心地在多執行緒中執行，並且不會發生任何在其他語言中常見且難以追蹤的程式錯誤。並行程式設計就不再是個令人害怕的概念，無畏無懼地開發並行程式吧！</p>
+<p>接下來，我們要討論當你的 Rust 程式成長時，定義出問題並組織解決辦法的慣用方案。除此之外，我們也將討論 Rust 有哪些與物件導向程式設計（object-oriented programming）類似的概念。</p>
+<blockquote>
+<ul>
+<li>translators: [Ngô͘ Io̍k-ūi <a href="mailto:wusyong9104@gmail.com">wusyong9104@gmail.com</a>]</li>
+<li>commit: <a href="https://github.com/rust-lang/book/blob/e5ed97128302d5fa45dbac0e64426bc7649a558c/src/ch16-04-extensible-concurrency-sync-and-send.md">e5ed971</a></li>
+<li>updated: 2020-09-22</li>
+</ul>
+</blockquote>
+<h1><a class="header" href="#rust-的物件導向程式設計特色" id="rust-的物件導向程式設計特色">Rust 的物件導向程式設計特色</a></h1>
+<p>物件導向程式設計（Object-oriented programming, OOP）是一種模組化程式的方式，物件的概念始於 1960 年的 Simula。這些物件影響了 Alan Kay 的程式設計架構中物件彼此之間訊息的傳遞。他在 1967 年提出了<em>物件導向程式設計</em>來描述此架構。對於 OOP 的定義有許多種描述，有些定義會將 Rust 歸類爲屬於物件導向的，而有些則不會。在本章節中，我們會探討特定常視爲是物件導向的特色並看看這些特色如何轉換成慣用的 Rust 程式碼。然後我們會向你展示如何在 Rust 中實作物件導向設計模式，並討論這麼做與利用 Rust 自身的優勢實現的版本有何取捨差別。</p>
+<blockquote>
+<ul>
+<li>translators: [Ngô͘ Io̍k-ūi <a href="mailto:wusyong9104@gmail.com">wusyong9104@gmail.com</a>]</li>
+<li>commit: <a href="https://github.com/rust-lang/book/blob/e5ed97128302d5fa45dbac0e64426bc7649a558c/src/ch17-00-oop.md">e5ed971</a></li>
+<li>updated: 2020-09-22</li>
+</ul>
+</blockquote>
 <h2><a class="header" href="#characteristics-of-object-oriented-languages" id="characteristics-of-object-oriented-languages">Characteristics of Object-Oriented Languages</a></h2>
 <p>There is no consensus in the programming community about what features a
 language must have to be considered object oriented. Rust is influenced by many
@@ -17205,7 +17160,7 @@ problem to take advantage of Rust’s features can provide benefits, such as
 preventing some bugs at compile time. Object-oriented patterns won’t always be
 the best solution in Rust due to certain features, like ownership, that
 object-oriented languages don’t have.</p>
-<h2><a class="header" href="#summary-4" id="summary-4">Summary</a></h2>
+<h2><a class="header" href="#summary-3" id="summary-3">Summary</a></h2>
 <p>No matter whether or not you think Rust is an object-oriented language after
 reading this chapter, you now know that you can use trait objects to get some
 object-oriented features in Rust. Dynamic dispatch can give your code some
@@ -18266,7 +18221,7 @@ reason is that we’ve used the struct field shorthand syntax. But we haven’t
 applied any test to the value in the <code>id</code> field in this arm, as we did with the
 first two arms: any value would match this pattern.</p>
 <p>Using <code>@</code> lets us test a value and save it in a variable within one pattern.</p>
-<h2><a class="header" href="#summary-5" id="summary-5">Summary</a></h2>
+<h2><a class="header" href="#summary-4" id="summary-4">Summary</a></h2>
 <p>Rust’s patterns are very useful in that they help distinguish between different
 kinds of data. When used in <code>match</code> expressions, Rust ensures your patterns
 cover every possible value, or your program won’t compile. Patterns in <code>let</code>
@@ -22552,7 +22507,7 @@ some ideas:</p>
 similar web server using the crate instead. Then compare its API and
 robustness to the thread pool we implemented.</li>
 </ul>
-<h2><a class="header" href="#summary-6" id="summary-6">Summary</a></h2>
+<h2><a class="header" href="#summary-5" id="summary-5">Summary</a></h2>
 <p>Well done! You’ve made it to the end of the book! We want to thank you for
 joining us on this tour of Rust. You’re now ready to implement your own Rust
 projects and help with other peoples’ projects. Keep in mind that there is a
