--- a/ch01-02-hello-world.html
+++ b/ch01-02-hello-world.html
@@ -249,7 +249,7 @@ main.rs
 <pre><code class="language-console">$ ./main # or .\main.exe on Windows
 </code></pre>
 <p>如果 <em>main.rs</em> 正是你的 “Hello, world!” 程式，這命令就會顯示 <code>Hello, world!</code> 到你的終端機。</p>
-<p>如果你比叫熟悉動態語言，像是 Ruby、Python 或 JavaScript，你可能會比較不習慣將編譯與執行程式分爲兩個不同的步驟。Rust 是一門 <em>預先編譯（ahead-of-time compiled）</em> 的語言，代表你可以編譯完成後將執行檔送到其他地方，然後他們就算沒有安裝 Rust 一樣可以執行起來。但如果你給某個人 <em>.rb</em>、<em>.py</em> 或 <em>.js</em> 檔案，他們就需要 Ruby、Python 或 Javascript 分別都有安裝好。當然你在這些語言只需要一行命令就可以執行，在語言設計中這一切都只是取捨。</p>
+<p>如果你比較熟悉動態語言，像是 Ruby、Python 或 JavaScript，你可能會比較不習慣將編譯與執行程式分爲兩個不同的步驟。Rust 是一門 <em>預先編譯（ahead-of-time compiled）</em> 的語言，代表你可以編譯完成後將執行檔送到其他地方，然後他們就算沒有安裝 Rust 一樣可以執行起來。但如果你給某個人 <em>.rb</em>、<em>.py</em> 或 <em>.js</em> 檔案，他們就需要 Ruby、Python 或 Javascript 分別都有安裝好。當然你在這些語言只需要一行命令就可以執行，在語言設計中這一切都只是取捨。</p>
 <p>在簡單的程式使用 <code>rustc</code> 來編譯不會有什麼問題，但當你的專案成長時，你將會需要管理所有選擇並讓程式碼易於分享。接下來我們將介紹 Cargo 這項工具給你，它將協助你寫出真正的 Rust 程式。</p>
 <blockquote>
 <ul>
