deploy: 88f97ea91a73d0cb6b4d3b48454b1830d6791ddc

--- a/ch04-01-what-is-ownership.html
+++ b/ch04-01-what-is-ownership.html
@@ -176,7 +176,7 @@
 <h3><a class="header" href="#堆疊stack與堆積heap" id="堆疊stack與堆積heap">堆疊（Stack）與堆積（Heap）</a></h3>
 <p>在許多程式語言，你通常不需要去想到堆疊與堆積。但在像是 Rust 這樣的系統程式語言，資料是位於堆疊還是堆積就會有差，這會影響語言的行爲以及爲何你得作出某些特定決策。在本章稍後討論所有權時，都會談到堆疊與堆積的關聯，所以這裡預先稍作解釋。</p>
 <p>堆疊與堆積都是供你的程式碼在執行時能夠使用的記憶體部分，但他們組成的方式卻不一樣。堆疊會按照它取得數值的順序依序存放它們，並以相反的順序移除數值。這通常稱爲<em>後進先出（last in, first out)</em>。你可以把堆疊想成是盤子，當你要加入更多盤子，你會將它們疊在最上面。如果你要取走盤子的話，你也是從最上方拿走。想要從底部或中間，插入或拿走盤子都是不可行的！當我們要新增資料時，我們會稱呼爲<em>推入堆疊（pushing onto the stack）</em>，而移除資料則是叫做<em>彈出堆疊（popping off the stack）</em>。</p>
-<p>所有在堆疊上的資料都必須是已知固定大小。在編譯時屬於未知或可能變更大小的資料必須儲存在堆疊。堆疊就比較沒有組織，當你要將資料放入堆疊，你得要求一定大小的空間。記憶體分配器（memory allocator）會找到一塊夠大的空位，標記爲已佔用，然後回傳一個<em>指標（pointer）</em>，指著該位置的地址。這樣的過程稱爲<em>在堆積上分配（allocating on the heap）</em>，或者有時直接簡稱爲*分配（allocating）*就好。將數值放入堆疊不會被視爲是在分配。因爲指標是固定已知的大小，所以你可以存在堆疊上。但當你要存取實際資料時，你就得去透過指標取得資料。</p>
+<p>所有在堆疊上的資料都必須是已知固定大小。在編譯時屬於未知或可能變更大小的資料必須儲存在堆積。堆積就比較沒有組織，當你要將資料放入堆積，你得要求一定大小的空間。記憶體分配器（memory allocator）會找到一塊夠大的空位，標記爲已佔用，然後回傳一個<em>指標（pointer）</em>，指著該位置的地址。這樣的過程稱爲<em>在堆積上分配（allocating on the heap）</em>，或者有時直接簡稱爲*分配（allocating）*就好。將數值放入堆疊不會被視爲是在分配。因爲指標是固定已知的大小，所以你可以存在堆疊上。但當你要存取實際資料時，你就得去透過指標取得資料。</p>
 <p>你可以想像成是一個餐廳。當你進入餐廳時，你會告訴服務員你的團體有多少人，他就會將你們帶到足夠人數的餐桌。如果你的團體有人晚到的話，他們可以直接尋問你坐在哪而找到你。</p>
 <p>將資料推入堆疊會比在堆積上分配還來的快，因爲分配器不需要去搜尋哪邊才能存入新資料，其位置永遠在堆疊最上方。相對的，堆積就需要比較多步驟，分配器必須先找到一個夠大的空位來儲存資料，然後作下紀錄未下次分配做準備。</p>
 <p>在堆積上取得資料也比在堆疊上取得來得慢，因爲你需要用追蹤指標才找的到。現代的處理器如果在記憶體間跳轉越少的話速度就越快。讓我們繼續用餐廳做比喻，想像伺服器就是在餐廳爲數個餐桌點餐。最有效率的點餐方式就是依照餐桌順序輪流點餐。如果幫餐桌 A 點了餐之後跑到餐桌 B 點，又跑回到 A 然後又跑到 B 的話，可以想像這是個浪費時間的過程。同樣的道理，處理器在處理任務時，如果處理的資料相鄰很近（就如同存在堆疊）的話，當然比相鄰很遠（如同存在堆積）來得快。要在堆積分配大量的空間同樣也很花時間。</p>
