deploy: 5820ba5cc7069aa2e5c21b65e4651c8febec790e

--- a/print.html
+++ b/print.html
@@ -395,7 +395,7 @@ doesn’t compile.</p>
 <h1><a class="header" href="#開始入門" id="開始入門">開始入門</a></h1>
 <p>讓我們開始你的 Rust 旅途吧！千里之行始於足下，在此章節我們將討論：</p>
 <ul>
-<li>在 Linex、macOS 和 Windows 上安裝 Rust</li>
+<li>在 Linux、macOS 和 Windows 上安裝 Rust</li>
 <li>寫一支印出 <code>Hello, world!</code> 的程式</li>
 <li>使用 Rust 的套件管理工具暨建構系統 <code>cargo</code></li>
 </ul>
