deploy: 2aed5d8660dd3d5aa87deb630ead2beaa2c49e60

--- a/appendix-08-terminology.html
+++ b/appendix-08-terminology.html
@@ -250,6 +250,7 @@
 <tr><td>mutability</td><td>可變性</td><td></td></tr>
 <tr><td>mutation</td><td>可變數</td><td></td></tr>
 <tr><td>namespace</td><td>命名空間</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E5%91%BD%E5%90%8D%E7%A9%BA%E9%97%B4">維基百科</a></td></tr>
+<tr><td>nested</td><td>巢狀</td><td></td></tr>
 <tr><td>operators</td><td>運算子</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/C%E5%92%8CC%2B%2B%E9%81%8B%E7%AE%97%E5%AD%90">維基百科</a></td></tr>
 <tr><td>overloading</td><td>重載</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E5%87%BD%E6%95%B0%E9%87%8D%E8%BD%BD">維基百科</a></td></tr>
 <tr><td>ownership</td><td>所有權</td><td></td></tr>
